# azure-pricing-mcp

./: .gitignore  LICENSE  README.md  ecosystem.config.js  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/azure_pricing_mcp/: __init__.py  __main__.py  azure_api.py  server.py
