[project]
name = "azure-pricing-mcp"
version = "0.1.3"
description = "MCP server for estimating Azure service costs using the Azure Retail Prices API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "pimentelleo" }]
keywords = ["mcp", "azure", "pricing", "cost-estimation", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/pimentelleo/azure-pricing-mcp"
Repository = "https://github.com/pimentelleo/azure-pricing-mcp"
Issues = "https://github.com/pimentelleo/azure-pricing-mcp/issues"

[project.scripts]
azure-pricing-mcp = "azure_pricing_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_pricing_mcp"]
